--- a/admin-web/src/index.css
+++ b/admin-web/src/index.css
@@ -6,6 +6,7 @@
 
 html, body {
   height: 100%;
+  max-width: 100vw;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -19,3 +20,13 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+@media (max-width: 768px) {
+  .ant-table-cell {
+    padding: 8px !important;
+  }
+  .ant-layout-content {
+    padding: 20px 10px;
+  }
+}
+
